--- a/app/src/main/res/layout/activity_delivery_vendor_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_vendor_detail.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginRight="@dimen/_10sdp"
             android:orientation="vertical">
 
