--- a/app/src/main/res/layout/vendor_bid_layout.xml
+++ b/app/src/main/res/layout/vendor_bid_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/itemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -32,72 +33,60 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.5"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-
-                    <ImageView
-                        android:id="@+id/imgNoodle"
-                        android:layout_width="@dimen/_48sdp"
-                        android:layout_height="@dimen/_48sdp"
-                        android:layout_gravity="center_vertical"
-                        android:background="@drawable/no_image_placholder"
-                        android:visibility="gone" />
-
-                    <LinearLayout
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        android:id="@+id/tvName"
+                        style="@style/TextAppearance.AppCompat.Subhead"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:text="NA"
+                        android:textAllCaps="false"
+                        app:edittextfont="Raleway-Bold.ttf" />
 
-                        <com.yberry.dinehawaii.customview.CustomTextView
-                            android:id="@+id/tvName"
-                            style="@style/TextAppearance.AppCompat.Subhead"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="NA"
-                            android:textAllCaps="false"
-                            app:edittextfont="Raleway-Bold.ttf" />
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        android:id="@+id/tvVendorName"
+                        style="@style/TextAppearance.AppCompat.Small"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="NA"
+                        app:edittextfont="@string/raleway_regular" />
 
-                        <com.yberry.dinehawaii.customview.CustomTextView
-                            android:id="@+id/tvOtherVendors"
-                            style="@style/TextAppearance.AppCompat.Small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="@dimen/_3sdp"
-                            android:singleLine="true"
-                            android:text="Other Vendors"
-                            android:textColor="@color/colorPrimary"
-                            app:edittextfont="@string/raleway_regular" />
-
-                        <com.yberry.dinehawaii.customview.CustomButton
-                            android:id="@+id/btnplacebid"
-                            style="@style/TextAppearance.AppCompat.Notification.Time"
-                            android:layout_width="wrap_content"
-                            android:layout_height="@dimen/_25sdp"
-                            android:layout_marginBottom="@dimen/_3sdp"
-                            android:layout_marginTop="@dimen/_3sdp"
-                            android:background="@drawable/plain_green_border"
-                            android:paddingLeft="@dimen/_6sdp"
-                            android:paddingRight="@dimen/_6sdp"
-                            android:text="add to cart"
-                            android:textColor="@color/green" />
-
-                    </LinearLayout>
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        android:id="@+id/tvOtherVendors"
+                        style="@style/TextAppearance.AppCompat.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:singleLine="true"
+                        android:text="Other Vendors"
+                        android:textColor="@color/colorPrimary"
+                        app:edittextfont="@string/raleway_bold" />
                 </LinearLayout>
 
-
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.3"
-                    android:gravity="center">
+                    android:layout_weight="0.6"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <com.yberry.dinehawaii.customview.CustomTextView
+                        style="@style/TextAppearance.AppCompat.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:singleLine="true"
+                        android:text="Price "
+                        android:textColor="@color/blue"
+                        app:edittextfont="@string/raleway_regular" />
 
                     <android.support.v7.widget.CardView
                         android:layout_width="@dimen/_30sdp"
                         android:layout_height="@dimen/_30sdp"
-                        android:layout_margin="@dimen/_5sdp"
+                        android:layout_margin="@dimen/_3sdp"
                         android:paddingRight="8dp"
                         android:paddingTop="8dp"
-                        app:cardBackgroundColor="@color/green"
                         app:cardCornerRadius="@dimen/_15sdp">
 
                         <com.yberry.dinehawaii.customview.CustomTextView
@@ -107,64 +96,52 @@
                             android:layout_height="match_parent"
                             android:gravity="center"
                             android:singleLine="true"
-                            android:text="$ 00"
-                            android:textColor="@color/white"
+                            android:text="$00"
+                            android:textColor="@color/green"
                             app:edittextfont="Raleway-Bold.ttf" />
                     </android.support.v7.widget.CardView>
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:gravity="center">
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/btnplacebid"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:layout_margin="@dimen/_3sdp"
+                        android:paddingRight="8dp"
+                        android:paddingTop="8dp"
+                        app:cardBackgroundColor="@color/green"
+                        app:cardCornerRadius="@dimen/_15sdp">
+
+                        <ImageView
+                            android:id="@+id/imageAddtoCart"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_add_white_24dp" />
+                    </android.support.v7.widget.CardView>
+
                 </RelativeLayout>
+
             </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/llotherVendors"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:orientation="vertical"
                 android:visibility="gone">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.1">
-
-                        <com.yberry.dinehawaii.customview.CustomTextView
-                            style="@style/TextAppearance.AppCompat.Subhead"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:padding="@dimen/_2sdp"
-                            android:text="Vendor Name"
-                            app:edittextfont="Raleway-Bold.ttf" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.1">
-
-                        <com.yberry.dinehawaii.customview.CustomTextView
-                            style="@style/TextAppearance.AppCompat.Subhead"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:padding="@dimen/_2sdp"
-                            android:text="Price"
-                            app:edittextfont="Raleway-Bold.ttf" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/colorDivider" />
-
                 <com.yberry.dinehawaii.customview.CustomTextView
                     android:id="@+id/noalternative"
+                    style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
@@ -175,32 +152,73 @@
                     android:paddingTop="@dimen/_5sdp"
                     android:text="No Alternatives Available"
                     android:visibility="gone"
-                    app:edittextfont="Raleway-Bold.ttf" />
+                    app:edittextfont="@string/raleway_regular" />
+
 
                 <LinearLayout
+                    android:id="@+id/llcolumns"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/_5sdp">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <android.support.v4.widget.NestedScrollView
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.8">
+
+                            <com.yberry.dinehawaii.customview.CustomTextView
+                                style="@style/TextAppearance.AppCompat.Small"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="@dimen/_2sdp"
+                                android:text="Vendor Name"
+                                app:edittextfont="Raleway-Bold.ttf" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.2">
+
+                            <com.yberry.dinehawaii.customview.CustomTextView
+                                style="@style/TextAppearance.AppCompat.Small"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right"
+                                android:padding="@dimen/_2sdp"
+                                android:text="Price"
+                                app:edittextfont="Raleway-Bold.ttf" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorDivider" />
+                </LinearLayout>
+
+                <android.support.v4.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <LinearLayout
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/listview"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <android.support.v7.widget.RecyclerView
-                                android:id="@+id/listview"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
-                        </LinearLayout>
-                    </android.support.v4.widget.NestedScrollView>
-
-                </LinearLayout>
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                </android.support.v4.widget.NestedScrollView>
             </LinearLayout>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
 </RelativeLayout>
