--- a/app/src/main/res/layout/vendor_activity_cart_bid.xml
+++ b/app/src/main/res/layout/vendor_activity_cart_bid.xml
@@ -131,19 +131,23 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/cart_borders">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_view"
+            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginRight="1dp"
-                    android:layout_marginTop="1dp" />
-            </LinearLayout>
+                    android:background="@drawable/cart_borders">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp" />
+                </LinearLayout>
+            </android.support.v4.widget.NestedScrollView>
         </LinearLayout>
     </ScrollView>
 
