--- a/app/src/main/res/layout/pop_up_dialog.xml
+++ b/app/src/main/res/layout/pop_up_dialog.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,33 +13,33 @@
 
         <RelativeLayout
             android:id="@+id/title_bar"
-            android:layout_alignParentTop="true"
             android:layout_width="match_parent"
-            android:background="@color/green"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:background="@color/green">
+
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/textView"
+                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:padding="@dimen/_10sdp"
                 android:text="Delivery Details"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
-                android:layout_centerVertical="true"
-                app:edittextfont="Raleway-Bold.ttf"/>
-
+                app:edittextfont="Raleway-Bold.ttf" />
 
 
             <ImageView
                 android:id="@+id/close"
-                android:padding="@dimen/_10sdp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_close_white_24dp"/>
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/_10sdp"
+                android:src="@drawable/ic_close_white_24dp" />
         </RelativeLayout>
 
 
@@ -52,50 +50,48 @@
             android:layout_marginLeft="@dimen/_15sdp"
             android:layout_marginRight="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:singleLine="true"
-            android:fontFamily="arial"
             android:background="@drawable/edit_text_line"
-            android:padding="@dimen/_10sdp"
+            android:fontFamily="arial"
             android:hint="Name"
             android:inputType="textCapSentences|textAutoCorrect"
-            android:textSize="@dimen/_10sdp"
+            android:padding="@dimen/_10sdp"
+            android:singleLine="true"
             android:textColor="@color/gray"
-            />
+            android:textSize="@dimen/_10sdp" />
+
         <EditText
             android:id="@+id/dcontact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_15sdp"
-            android:singleLine="true"
-            android:inputType="number"
-            android:maxLength="10"
             android:layout_marginRight="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:fontFamily="arial"
             android:background="@drawable/edit_text_line"
-            android:padding="@dimen/_10sdp"
+            android:fontFamily="arial"
             android:hint="Contact No."
-            android:textSize="@dimen/_10sdp"
+            android:inputType="number"
+            android:maxLength="10"
+            android:padding="@dimen/_10sdp"
+            android:singleLine="true"
             android:textColor="@color/gray"
-            />
+            android:textSize="@dimen/_10sdp" />
 
         <EditText
             android:id="@+id/daddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_15sdp"
-            android:singleLine="true"
             android:layout_marginRight="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:fontFamily="arial"
-            android:inputType="textPostalAddress"
-
             android:background="@drawable/edit_text_line"
-            android:padding="@dimen/_10sdp"
+            android:focusableInTouchMode="false"
+            android:fontFamily="arial"
             android:hint="Address"
-            android:textSize="@dimen/_10sdp"
+            android:inputType="textPostalAddress"
+            android:padding="@dimen/_10sdp"
+            android:singleLine="true"
             android:textColor="@color/gray"
-            />
+            android:textSize="@dimen/_10sdp" />
 
         <!-- <EditText
 
@@ -171,22 +167,18 @@
             android:id="@+id/dsubmit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:background="@drawable/button_border_green"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:layout_marginLeft="@dimen/_15sdp"
             android:layout_marginRight="@dimen/_15sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@drawable/button_border_green"
             android:gravity="center"
             android:padding="@dimen/_10sdp"
+            android:text="Submit"
             android:textAllCaps="true"
-            android:text="Submit"/>
-
-
-
-
+            android:textColor="@color/white"
+            android:textSize="@dimen/_10sdp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
