--- a/app/src/main/res/layout/activity_edit_menu_item.xml
+++ b/app/src/main/res/layout/activity_edit_menu_item.xml
@@ -8,7 +8,7 @@
     android:background="@color/white"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="com.yberry.dinehawaii.activity.FoodService">
+    tools:context="com.yberry.dinehawaii.Bussiness.Activity.EditMenuItemActivity">
 
     <include
         android:id="@+id/toolbar_bar"
@@ -106,7 +106,40 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:background="@color/colorDivider"></View>
+            <com.yberry.dinehawaii.customview.CustomTextView
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_9sdp"
+                android:drawableLeft="@drawable/drawable_green_dot"
+                android:drawablePadding="@dimen/_5sdp"
+                android:gravity="center"
+                android:text="Select Business Area"
+                android:textColor="@color/colorGreen"
+                app:edittextfont="Raleway-Bold.ttf" />
 
+
+            <com.yberry.dinehawaii.customview.CustomEditText
+                android:id="@+id/etBusArea"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:background="@null"
+                android:focusableInTouchMode="false"
+                android:hint="Select Area"
+                android:padding="@dimen/_5sdp"
+                android:singleLine="true"
+                android:textColor="@color/edit_text_color"
+                app:edittextfont="Raleway-Regular.ttf"></com.yberry.dinehawaii.customview.CustomEditText>
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:background="@color/colorDivider"></View>
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/tvFoodName"
                 android:layout_width="wrap_content"
@@ -127,7 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:hint="Enter Food name"
+                android:hint="Enter Food Name"
                 android:padding="@dimen/_5sdp"
                 android:background="@null"
                 android:singleLine="true"
