--- a/app/src/main/res/layout/fragment_business_home_fragment41.xml
+++ b/app/src/main/res/layout/fragment_business_home_fragment41.xml
@@ -323,6 +323,17 @@
                     android:padding="@dimen/_5sdp"
                     android:text="Manage Coupons"
                     app:edittextfont="Raleway-Regular.ttf" />
+                <com.yberry.dinehawaii.customview.CustomTextView
+                    android:id="@+id/tvBusAreas"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/blue"
+                    android:drawableLeft="@drawable/drawable_green_dot"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:padding="@dimen/_5sdp"
+                    android:text="Business Areas"
+                    app:edittextfont="Raleway-Regular.ttf" />
 
 
             </LinearLayout>
