--- a/app/src/main/res/layout/fragment_manage_coupons.xml
+++ b/app/src/main/res/layout/fragment_manage_coupons.xml
@@ -1,26 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activityBackground">
+
     <com.yberry.dinehawaii.customview.CustomTextView
         android:id="@+id/noCoupons"
         android:layout_width="wrap_content"
-        android:layout_margin="@dimen/_20sdp"
         android:layout_height="wrap_content"
-        android:text="No Coupons Available"
         android:layout_centerHorizontal="true"
+        android:layout_margin="@dimen/_20sdp"
+        android:background="@drawable/text_background"
+        android:paddingBottom="@dimen/_5sdp"
         android:paddingLeft="@dimen/_10sdp"
         android:paddingRight="@dimen/_10sdp"
         android:paddingTop="@dimen/_5sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        android:background="@drawable/text_background"
+        android:text="No Coupons Available"
         android:visibility="gone"
-        app:edittextfont="Raleway-Regular.ttf"
-        />
+        app:edittextfont="Raleway-Regular.ttf" />
 
     <android.support.v7.widget.RecyclerView
+
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
