--- a/app/src/main/res/layout/activity_order_history_or_reservation.xml
+++ b/app/src/main/res/layout/activity_order_history_or_reservation.xml
@@ -19,7 +19,7 @@
             app:tabMode="fixed"
             app:tabSelectedTextColor="@color/colorPrimary"
             app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-            app:tabTextColor="@color/text_color" />
+            app:tabTextColor="@color/gray" />
 
 
         <android.support.v4.view.ViewPager
