--- a/app/src/main/res/layout/nav_header_customer_navi_drawer.xml
+++ b/app/src/main/res/layout/nav_header_customer_navi_drawer.xml
@@ -6,24 +6,31 @@
     android:background="#1e1e1e"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/_15sdp"
+    android:padding="@dimen/_10sdp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/mUserImage"
-        android:layout_width="@dimen/_70sdp"
-        android:layout_height="@dimen/_70sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:src="@drawable/pic"
-        app:civ_border_color="#d7d7d7"
-        app:civ_border_overlay="false"
-        app:civ_border_width="2dp"/>
+    <android.support.v7.widget.CardView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:paddingRight="8dp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:paddingTop="8dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="50dp">
+
+        <ImageView
+            android:id="@+id/mUserImage"
+            android:layout_width="match_parent"
+            android:src="@drawable/pic"
+            android:layout_height="match_parent"
+            />
+    </android.support.v7.widget.CardView>
 
     <com.yberry.dinehawaii.customview.CustomTextView
         android:id="@+id/customerName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_5sdp"
         android:text="NA"
         android:textAlignment="center"
         style="@style/TextAppearance.AppCompat.Subhead"
